yiltc-go-backup/testsuite/negative/immutable_index_assign.yilt
fn foo()
    let t = {}
    t["key"] = "value"
